# magic-link

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  magic-link.cabal
app/: Main.hs
config/: dev.yaml  test.yaml
src/: App.hs  Config.hs  MyLib.hs  Server.hs
src/API/: HealthCheck.hs
src/API/Signup/: Handler.hs  Request.hs  Response.hs
src/App/: Context.hs
src/Config/: Environment.hs
src/Email/: Data.hs  Producer.hs
src/Infra/: RabbitMQ.hs
test/: Main.hs  TestUtils.hs
test/API/: HealthCheckSpec.hs
test/API/Signup/: HandlerSpec.hs
test/Email/: ProducerSpec.hs
