cabal-version:      3.4
name:               magic-link
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Mfon Eti-mfon
maintainer:         mfonetimfon@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        API.HealthCheck
        API.Signup.Handler
        API.Signup.Request
        API.Signup.Response
        App
        Server
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        aeson,
        bytestring,
        email-validate,
        servant,
        servant-server,
        warp,
        wai,
    hs-source-dirs:   src
    default-language: GHC2021

executable magic-link
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        magic-link,
        warp,

    hs-source-dirs:   app
    default-language: GHC2021

test-suite magic-link-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        API.HealthCheckSpec
        API.Signup.HandlerSpec
        TestUtils
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        magic-link,
        aeson,
        bytestring,
        hspec,
        http-types,
        magic-link,
        servant-server,
        wai,
        wai-extra,
